[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/HBG.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/HFG.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/DBG1.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Graph-35-pix.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/UI/PauseMenu4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/PauseMenu3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/PauseMenu2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/PauseMenu1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/PauseMenu0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UI/PauseMenu.png" type="Texture" id=11]
[ext_resource path="res://Sprites/UI/Button.selected.png" type="Texture" id=12]
[ext_resource path="res://Sprites/UI/EatCursor.png" type="Texture" id=13]
[ext_resource path="res://Scenes/HUDObject.tscn" type="PackedScene" id=14]
[ext_resource path="res://Sprites/Objects/Berry4.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Objects/Berry2.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]

size = 8
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "On",
"speed": 16.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": false,
"name": "Off",
"speed": 16.0
} ]

[sub_resource type="DynamicFont" id=3]

size = 8
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="Theme" id=9]

VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 4 )
VScrollBar/styles/grabber_highlight = SubResource( 5 )
VScrollBar/styles/grabber_pressed = SubResource( 6 )
VScrollBar/styles/scroll = SubResource( 7 )
VScrollBar/styles/scroll_focus = SubResource( 8 )
_sections_unfolded = [ "VScrollBar", "VScrollBar/styles" ]

[node name="HUD" type="CanvasLayer" index="0"]

pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 81.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = ExtResource( 2 )
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_right = 2
_sections_unfolded = [ "Textures" ]

[node name="Dialogues" type="Container" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Dialogues" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
_sections_unfolded = [ "Patch Margin" ]

[node name="Label" type="Label" parent="Dialogues" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 8.0
margin_right = -16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.152941, 0.152941, 0.211765, 1 )
text = "Dialogue Here"
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="PauseBG" type="AnimatedSprite" parent="." index="2"]

position = Vector2( 15, 17 )
frames = SubResource( 2 )
animation = "On"
frame = 5
centered = false

[node name="PauseMenu" type="Container" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="BerryName" type="Label" parent="PauseMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 137.0
margin_top = 19.0
margin_right = 193.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.152941, 0.211765, 1 )
text = "+10 HP"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="OptionFlag" type="TextureRect" parent="PauseMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 48.0
margin_right = 232.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Option1" type="Label" parent="PauseMenu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 48.0
margin_right = 232.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.152941, 0.211765, 1 )
text = "Save"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Option2" type="Label" parent="PauseMenu" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 72.0
margin_right = 232.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.152941, 0.211765, 1 )
text = "Mute"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Option3" type="Label" parent="PauseMenu" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 96.0
margin_right = 232.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.152941, 0.211765, 1 )
text = "Menu"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="EatFlag" type="TextureRect" parent="PauseMenu" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 40.0
margin_right = 140.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 13 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Berries" type="ScrollContainer" parent="PauseMenu" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 137.0
margin_top = 37.0
margin_right = 193.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 9 )
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Scroll", "Theme" ]

[node name="List" type="VBoxContainer" parent="PauseMenu/Berries" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 16.0
margin_bottom = 476.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Object1" parent="PauseMenu/Berries/List" index="0" instance=ExtResource( 14 )]

use = "Berry"
value = 0

[node name="Object2" parent="PauseMenu/Berries/List" index="1" instance=ExtResource( 14 )]

margin_top = 20.0
margin_bottom = 36.0
texture = ExtResource( 15 )
use = "Sleep"
value = 1

[node name="Object3" parent="PauseMenu/Berries/List" index="2" instance=ExtResource( 14 )]

margin_top = 40.0
margin_bottom = 56.0
texture = ExtResource( 16 )
use = "Kill"
value = 2

[node name="Object4" parent="PauseMenu/Berries/List" index="3" instance=ExtResource( 14 )]

margin_top = 60.0
margin_bottom = 76.0
use = "Berry"
value = 0

[node name="Object5" parent="PauseMenu/Berries/List" index="4" instance=ExtResource( 14 )]

margin_top = 80.0
margin_bottom = 96.0
texture = ExtResource( 15 )
use = "Sleep"
value = 1

[node name="Object6" parent="PauseMenu/Berries/List" index="5" instance=ExtResource( 14 )]

margin_top = 100.0
margin_bottom = 116.0
texture = ExtResource( 16 )
use = "Kill"
value = 2

[node name="Object7" parent="PauseMenu/Berries/List" index="6" instance=ExtResource( 14 )]

margin_top = 120.0
margin_bottom = 136.0
use = "Berry"
value = 0


